# MolDockPipeV2

./: .gitignore  Module 1.py  Module 2.py  Module 3 (Parallel).py  Module 4a (CPU).py  Module 4b (GPU)v3.py  README.md  WARNING_PURGE_PIPELINE.py  environment.windows.yml  environment.yml  pyproject.toml  requirements.windows.txt
example_project_francine/input/: input.csv
moldockpipe/: __init__.py  artifacts.py  cli.py  engine.py  fingerprints.py  planner.py  progress_watcher.py  purge.py  run_ui.py
moldockpipe/adapters/: __init__.py  admet.py  build3d.py  common.py  docking_cpu.py  docking_gpu.py  meeko.py
moldockpipe/state/: __init__.py  manifest.py  run_status.py
projects/example_project/config/: run.yml
projects/example_project/input/: input.csv
projects/example_project/receptors/: target_prepared.pdbqt
projects/example_project_francine/config/: run.yml
tests/: test_adapters.py  test_cli.py  test_engine.py  test_planner.py  test_purge.py  test_state.py
tests/fixtures/: print_emoji.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  cliOutput.d.ts  cliOutput.js  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
ui/tests/: cliOutput.test.mjs
