[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moldockpipe"
version = "0.1.0"
description = "Engine + CLI orchestrator for MolDockPipe"
requires-python = ">=3.10"

[project.scripts]
moldock = "moldockpipe.cli:app"

[tool.setuptools]
packages = ["moldockpipe", "moldockpipe.adapters", "moldockpipe.state"]
